--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="reveal">
 	<div class="slides">
 		<section>
-			<h1>The Presentation Title</h1>
+			<h1>The Great Presentation Title</h1>
 			<aside class="notes">notes:</aside>
 		</section>
 		<section>
